<resources>
    <string name="app_name">De-Ship</string>
    <string name="dashboard">Dashboard</string>
    <string name="delivery">Delivery</string>
    <string name="pickup">Pick Up</string>
    <string name="tracking">Tracking</string>
    <string name="create_delivery">Create Delivery</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="bill_info_underline"><u>Bill info</u></string>
    <string name="customer_info_underline"><u>Customer info</u></string>
    <string name="route_info_underline"><u>Route info</u></string>
    <string name="place_order">Place Order</string>
    <string name="pending">Pending</string>
    <string name="message_accepted">Message\nAccepted</string>
    <string name="rejected">Message Rejected</string>
    <string name="message_sent">Message Sent</string>
    <string name="space">   </string>
</resources>