<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="whatsappDeliveryStatusViewModel"
            type="com.editor.shippingdelivery.main.whatsappdeliverystatus.viewmodels.WhatsappDeliveryStatusViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/weldon_blue"
        tools:context=".main.whatsappdeliverystatus.WhatsappDeliveryStatusActivity">

        <View
            android:id="@+id/view_toolbar_bg"
            android:layout_width="0dp"
            android:layout_height="@dimen/_60sdp"
            android:background="@color/weldon_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="0dp"
            android:padding="@dimen/_12sdp"
            android:src="@mipmap/ic_back"
            app:tint="@color/white"
            android:visibility="visible"
            android:onClick="back"
            app:layout_constraintBottom_toBottomOf="@+id/tv_toolbar_label"
            app:layout_constraintDimensionRatio="h,1:1"
            app:layout_constraintStart_toStartOf="@+id/view_toolbar_bg"
            app:layout_constraintTop_toTopOf="@+id/view_toolbar_bg" />

        <TextView
            android:id="@+id/tv_toolbar_label"
            android:layout_width="0dp"
            android:layout_height="@dimen/_50sdp"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center_vertical"
            android:text="Orders"
            android:paddingStart="@dimen/_5sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/_14ssp"
            android:background="@color/weldon_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_goneMarginStart="@dimen/_10sdp" />

        <ProgressBar
            android:id="@+id/progress_horizontal"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminateOnly="true"
            android:indeterminateTint="@color/sunset_orange"
            android:background="@color/weldon_blue"
            android:visibility='@{whatsappDeliveryStatusViewModel.isProgress?View.VISIBLE:View.GONE}'
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_toolbar_label" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_margin="5dp"

            app:layout_constraintEnd_toEndOf="@+id/progress_horizontal"
            app:layout_constraintTop_toBottomOf="@+id/view_toolbar_bg">

            <Button
                android:id="@+id/pending_btn"
                android:layout_width="0dp"
                android:layout_height="54dp"
                android:layout_marginEnd="1dp"
                android:layout_weight="0.25"
              android:layout_marginTop="7dp"
                android:text="@string/pending"
                android:textAllCaps="false"
                android:textSize="@dimen/_10ssp"
                tools:layout_editor_absoluteX="11dp"
                tools:layout_editor_absoluteY="72dp" />

            <Button
                android:id="@+id/message_sent_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:text="@string/message_sent"
                android:textSize="@dimen/_10ssp"
                android:textAllCaps="false"
                android:layout_marginEnd="1dp"
                tools:layout_editor_absoluteX="11dp"
                tools:layout_editor_absoluteY="72dp" />

            <Button
                android:id="@+id/message_accepted_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:text="@string/message_accepted"
                android:textAllCaps="false"
                android:textSize="@dimen/_10ssp"
                android:layout_marginEnd="1dp"
                tools:layout_editor_absoluteX="11dp"
                tools:layout_editor_absoluteY="72dp" />

            <Button
                android:id="@+id/rejected_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:text="@string/rejected"
                android:textAllCaps="false"
                android:textSize="@dimen/_10ssp"
                android:layout_marginEnd="5dp"
                tools:layout_editor_absoluteX="11dp"
                tools:layout_editor_absoluteY="72dp" />
        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_whatsapp_status_orders"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/_4sdp"
            android:background="@color/weldon_blue"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            tools:listitem="@layout/list_whatsapp_delivery_status_orders" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>