<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_dashboard_gradient"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/tv_dashboard_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:includeFontPadding="false"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:text="@string/dashboard"
            android:visibility="invisible"
            android:textColor="@color/white"
            android:textSize="@dimen/_30ssp"
            android:textStyle="bold"
            android:fontFamily="@font/montserrat_medium"
            app:layout_constraintBottom_toTopOf="@+id/guideline_40_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_40_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="146dp" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/_20sdp"
            android:background="@drawable/bg_dashboard_white_left_curve"
            app:cardCornerRadius="@dimen/_15sdp"
            app:cardElevation="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_40_vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_delivery"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_15sdp"
                app:cardElevation="@dimen/_3sdp"
                app:layout_constraintEnd_toStartOf="@+id/cv_watsapp"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintEnd_toStartOf="@+id/constraintLayout3"
                    app:layout_constraintStart_toEndOf="@+id/constraintLayout2">

                    <ImageView
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="0dp"
                        android:padding="@dimen/_5sdp"
                        android:src="@mipmap/ic_dashboard_delivery_menu"
                        app:layout_constraintBottom_toTopOf="@+id/tv_delivery_menu_label"
                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_delivery_menu_label"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@color/light_primary"
                        android:gravity="center"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/delivery"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14ssp"
                        android:fontFamily="@font/elmessiri_regular"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_watsapp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                app:cardCornerRadius="@dimen/_15sdp"
                app:cardElevation="@dimen/_3sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/cv_delivery"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintEnd_toStartOf="@+id/constraintLayout2"
                    app:layout_constraintStart_toEndOf="@+id/constraintLayout">

                    <ImageView
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="0dp"
                        android:padding="@dimen/_10sdp"
                        android:src="@mipmap/ic_dashboard_whatsapp_menu"
                        app:layout_constraintBottom_toTopOf="@+id/tv_wats_app_menu_label"
                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_wats_app_menu_label"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@color/light_primary"
                        android:gravity="center"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/whatsapp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14ssp"
                        android:fontFamily="@font/montserrat_medium"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>