<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="ViewModel"
            type="com.editor.shippingdelivery.main.pendingdeliveryorders.adapter.PendingDeliveryOrdersAdapter" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:elevation="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_5sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_customer_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/_5sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingEnd="@dimen/_5sdp"
                    android:text="Arun Kumar m"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/_14ssp"
                    app:layout_constraintEnd_toStartOf="@+id/tv_date"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_5sdp"
                    android:text="19-02-2022"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_customer_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/barrier_customername_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:barrierDirection="bottom"
                    app:constraint_referenced_ids="tv_customer_name,tv_date" />

                <TextView
                    android:id="@+id/tv_invoice_no"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/_5sdp"
                    android:paddingEnd="@dimen/_5sdp"
                    android:text="INV2000002"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/_14ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/barrier_customername_date" />

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/barrier_invoice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:barrierDirection="bottom"
                    app:constraint_referenced_ids="tv_invoice_no" />

                <TextView
                    android:id="@+id/tv_bill_info"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/_6sdp"
                    android:text="@string/bill_info_underline"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintEnd_toStartOf="@+id/tv_customer_info"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/barrier_invoice" />

                <TextView
                    android:id="@+id/tv_customer_info"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/_6sdp"
                    android:text="@string/customer_info_underline"
                    android:textColor="@color/green"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintEnd_toStartOf="@+id/tv_route_info"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/tv_bill_info"
                    app:layout_constraintTop_toBottomOf="@+id/barrier_invoice" />

                <TextView
                    android:id="@+id/tv_route_info"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/_6sdp"
                    android:text="@string/route_info_underline"
                    android:textColor="@color/red"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"

                    app:layout_constraintStart_toEndOf="@+id/tv_customer_info"
                    app:layout_constraintTop_toBottomOf="@+id/barrier_invoice" />

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/barrier_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:barrierDirection="bottom"
                    app:constraint_referenced_ids="tv_bill_info,tv_customer_name,tv_route_info" />

                <View
                    android:id="@+id/view_divider"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@color/divider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/barrier_info" />

                <TextView
                    android:id="@+id/tv_net_amt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_5sdp"
                    android:text="Rs.115.00"
                    android:textColor="@color/primary_color"
                    android:textSize="@dimen/_14ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view_divider" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/primary_color"
                    android:fallbackLineSpacing="false"
                    android:gravity="center"
                    android:padding="@dimen/_5sdp"
                    android:text="Delivery"
                    android:textColor="@color/button_text"
                    android:textSize="@dimen/_14ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view_divider" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>