<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="headerModel"
            type="com.editor.shippingdelivery.main.pickup.model.DeliveryOrdesrHeaderDataModel" />

        <variable
            name="ViewModel"
            type="com.editor.shippingdelivery.main.pickup.adapter.DeliveryOrdersListAdapter" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/deliveryBase"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:elevation="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <View
                    android:id="@+id/view_line_bg"
                    android:layout_width="@dimen/_2sdp"
                    android:layout_height="0dp"
                    android:background="@color/primary_color"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_customer_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/elmessiri_semibold"
                    android:paddingStart="@dimen/_5sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingEnd="@dimen/_5sdp"
                    android:text="@{headerModel.customerName}"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/_14ssp"
                    app:layout_constraintEnd_toStartOf="@+id/tv_date"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/elmessiri_regular"
                    android:padding="@dimen/_5sdp"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_customer_name"
                    app:layout_constraintEnd_toStartOf="@+id/view_line_bg"
                    app:layout_constraintTop_toTopOf="parent"
                    app:set_date="@{headerModel.invoiceDt}" />

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/barrier_customername_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:barrierDirection="bottom"
                    app:constraint_referenced_ids="tv_customer_name,tv_date" />

                <TextView
                    android:id="@+id/tv_invoice_no"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/elmessiri_regular"
                    android:padding="@dimen/_5sdp"
                    android:text="@{headerModel.invoiceNo}"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintBottom_toTopOf="@+id/barrier_invoice"
                    app:layout_constraintEnd_toStartOf="@+id/tv_line_no"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/barrier_customername_date" />

                <TextView
                    android:id="@+id/tv_line_no"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/elmessiri_regular"
                    android:padding="@dimen/_5sdp"
                    android:text='@{headerModel.deliveryOrdersDetailDataModelArrayList.size()+" Lines"}'
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintBottom_toTopOf="@+id/barrier_invoice"
                    app:layout_constraintEnd_toStartOf="@+id/view_line_bg"
                    app:layout_constraintTop_toBottomOf="@+id/barrier_customername_date" />

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/barrier_invoice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:barrierDirection="bottom"
                    app:constraint_referenced_ids="tv_invoice_no,tv_line_no" />

                <TextView
                    android:id="@+id/tv_bill_info"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/elmessiri_regular"
                    android:gravity="center"
                    android:paddingStart="@dimen/_3sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingEnd="@dimen/_3sdp"
                    android:paddingBottom="@dimen/_5sdp"
                    android:text="@string/bill_info_underline"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/_12ssp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toStartOf="@+id/tv_customer_info"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/barrier_invoice" />

                <TextView
                    android:id="@+id/tv_customer_info"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/elmessiri_regular"
                    android:gravity="center"
                    android:paddingStart="@dimen/_3sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingEnd="@dimen/_3sdp"
                    android:paddingBottom="@dimen/_5sdp"
                    android:text="@string/customer_info_underline"
                    android:textColor="@color/green"
                    android:textSize="@dimen/_12ssp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toStartOf="@+id/tv_route_info"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/tv_bill_info"
                    app:layout_constraintTop_toBottomOf="@+id/barrier_invoice" />

                <TextView
                    android:id="@+id/tv_route_info"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/elmessiri_regular"
                    android:gravity="center"
                    android:paddingStart="@dimen/_3sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingEnd="@dimen/_3sdp"
                    android:paddingBottom="@dimen/_5sdp"
                    android:text="@string/route_info_underline"
                    android:textColor="@color/red"
                    android:textSize="@dimen/_12ssp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toStartOf="@+id/view_line_bg"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/tv_customer_info"
                    app:layout_constraintTop_toBottomOf="@+id/barrier_invoice" />

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/barrier_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:barrierDirection="bottom"
                    app:constraint_referenced_ids="tv_bill_info,tv_customer_info,tv_route_info" />

                <View
                    android:id="@+id/view_divider"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@color/primary_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/barrier_info" />

                <TextView
                    android:id="@+id/tv_net_amt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/elmessiri_semibold"
                    android:padding="@dimen/_5sdp"
                    android:textColor="@color/primary_color"
                    android:textSize="@dimen/_14ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/iv_cancel_delivery"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view_divider"
                    app:set_value_with_symbol="@{headerModel.totNetAmt.toString()}" />

                <ImageView
                    android:id="@+id/iv_cancel_delivery"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:background="@color/red"
                    android:padding="@dimen/_5sdp"
                    android:src="@mipmap/ic_cancel_64"
                    android:tint="@color/white"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/iv_pickup_delivery"
                    app:layout_constraintTop_toBottomOf="@+id/view_divider" />

                <View
                    android:layout_width="@dimen/_1sdp"
                    android:layout_height="0dp"
                    android:background="@color/divider"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/iv_pickup_delivery"
                    app:layout_constraintTop_toBottomOf="@+id/view_divider" />

                <ImageView
                    android:id="@+id/iv_pickup_delivery"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:background="@color/primary_color"
                    android:padding="@dimen/_5sdp"
                    android:src="@mipmap/ic_pick_up_64"
                    android:tint="@color/white"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view_divider" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>